--- a/css/styles.css
+++ b/css/styles.css
@@ -9,8 +9,10 @@ body {
   top: 20%;
   left: 10%;
   right: 10%;
-  width: 80%;
+  width: 85%;
   line-height: .5;
+  border-radius: 25px;
+  
 }
 #quote {
   font-size: 4rem;
@@ -18,6 +20,8 @@ body {
   line-height: 1.1;
   position: relative;
   margin: 0;
+  padding-left: 50px;
+  padding-right: 50px;
   } 
 #quote:before, .quote:after {
   font-size: 6rem;
@@ -26,8 +30,8 @@ body {
 }
 #quote:before {
   content: "“";
-  top: .25em;
-  left: -.5em;
+  top: .1em;
+  left: 0.1em;
 }
 #quote:after {
   content: "”";
@@ -58,12 +62,12 @@ body {
 }
 
 #loadQuote {
-  position: fixed;
+  position:fixed;
   width: 12em;
   display: inline-block;
   left: 50%;
   margin-left: -6em;
-  bottom: 150px;
+  bottom: 90px;
   border-radius: 4px;
   border: 2px solid #fff;
   color: #fff;
@@ -88,4 +92,20 @@ body {
   .source {
     font-size: 1rem;
   }
+}
+
+#tag {
+    text-align: center;
+    letter-spacing: 3px;
+    border-bottom: solid white 0.5px;
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+    font-size: 1.4em;
+    
+}
+
+#tag::first-letter {
+    font-size: 1.9em;
+    
+    
 }
